welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:16: error: not found: value nums
        if (nums(i+1)<nums(i)) {
            ^noTriples:16: error: not found: value nums
        if (nums(i+1)<nums(i)) {
                      ^noTriples:17: error: not found: value nums
    			nums(i)=nums(i+1)-nums(i)
                        ^noTriples:17: error: not found: value nums
    			nums(i)=nums(i+1)-nums(i)
                                ^noTriples:17: error: not found: value nums
    			nums(i)=nums(i+1)-nums(i)
                                          ^noTriples:18: error: not found: value nums
    			nums(i+1)=nums(i+1)-nums(i)
                        ^noTriples:18: error: not found: value nums
    			nums(i+1)=nums(i+1)-nums(i)
                                  ^noTriples:18: error: not found: value nums
    			nums(i+1)=nums(i+1)-nums(i)
                                            ^noTriples:19: error: not found: value nums
    			nums(i)=nums(i+1)+nums(i)
                        ^noTriples:19: error: not found: value nums
    			nums(i)=nums(i+1)+nums(i)
                                ^noTriples:19: error: not found: value nums
    			nums(i)=nums(i+1)+nums(i)
                                          ^noTriples:21: error: not enough arguments for method verifTrie: (tab: Array[Int])Boolean.
Unspecified value parameter tab.
    estTrie=verifTrie()
                     ^